SE-62: Refactor and Test Cases for Property Management (#23)
- Refactored property management services and added comments for readability.
- Created test cases for property related services.
- Adjusted peak season rate logic for more accurate price adjustments.
- Fixed city fetching and property deletion workflows.
- Resolved issues with the image cleanup scheduler.